--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.robocontrol">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -14,10 +15,12 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.bluetooth.BluetoothActivity"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="landscape"
+            tools:ignore="LockedOrientationActivity"/>
         <activity
             android:name=".ui.main.MainActivity"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape"
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
