--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
 
     // Material design
     implementation 'com.google.android.material:material:1.1.0'
+
+    // Joystick
+    implementation 'io.github.controlwear:virtualjoystick:1.10.1'
 }
